# ring_ai

./: .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3134a9e01ece_create_core_tables_organizations_.py  a1b2c3d4e5f6_add_sms_fields_to_campaigns.py  a1b2c3d4e5f6_add_users_and_api_keys_tables.py  a2f1c3d04e7b_add_credit_consumed_and_updated_at_to_.py  a2f8c4d91b3e_add_scheduled_status_and_scheduled_at.py  a7b2c3d4e5f6_add_otp_records_table.py  a7f2c8b3d401_add_phone_numbers_table.py  b1a2c3d4e5f6_add_notifications_table.py  b1c2d3e4f5a6_add_kyc_verifications_table.py  b1c2d3e4f5g6_add_campaign_categories_voice_tiers_carrier.py  b3c4d5e6f7a8_add_campaign_retry_and_relaunch.py  (+8 more)
backend/app/: main.py  seed.py
backend/app/core/: auth.py  (+1 more)
backend/scripts/: nepali_voice_quality_test.py
backend/tests/: conftest.py  test_analytics.py  test_audio_upload.py  test_auth.py  test_campaign_categories.py  test_campaign_executor.py  test_campaign_retarget.py  test_campaigns.py  test_contacts.py  test_credits.py  test_forms.py  test_function_calling.py  test_gateway_bridge.py  test_health.py  test_inbound_routing.py  test_insights.py  test_interactive_agent.py  test_knowledge_base.py  test_kyc.py  test_models.py  test_notifications.py  test_otp.py  test_phone_numbers.py  test_playback_tracking.py  test_sentiment.py  test_templates.py  test_text.py  test_tts.py  test_voice.py  test_voice_models.py
(+200 files in other folders)
