[project]
name = "ring-ai-backend"
version = "0.1.0"
description = "Ring AI backend — FastAPI service for voice campaigns, SMS, and TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "azure-cognitiveservices-speech>=1.40.0",
    "edge-tts>=6.1.0",
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "twilio>=9.0.0",
    "uvicorn[standard]>=0.40.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
